Fix jump to selection in left nav

--- a/frontend/styles/_content.sass
+++ b/frontend/styles/_content.sass
@@ -19,7 +19,7 @@ body#home .content
     width: 85%
 
 .content-body
-  padding: 0 9%
+  padding: 0 6%
 
   h1 
     line-height: 1.2em
@@ -105,10 +105,10 @@ body#home .content
       border: 3px solid #12BBF3
 
   ul, ol
-    margin-top: 0;
+    margin-top: 2em;
     margin-bottom: 2em
     li 
-      margin-bottom: 0.3em
+      margin-bottom: 0.5em
     ul, ol
       margin-bottom: 0
 
